corrected assignment names

--- a/HomePage.html
+++ b/HomePage.html
@@ -105,7 +105,7 @@
 
 	<p>
 		Listing of current Internet of Things assignments<br />
-		spring 22-using DexPiRed image on microSD card, pre-installed on IoT workstations
+		spring 22-using DexPiRed2 image on microSD card, pre-installed on IoT workstations
 	</p>
 
 
@@ -140,25 +140,25 @@
 				<td>2</td>
 				<td>&nbsp;</td>
 				<td><a href="IOTP02/IOTP02.html">IOTP02</a> -Raspberry Pi-VNC</td>
-				<td>&nbsp;</td>
+				<td>updated 2/22</td>
 			</tr>
 			<tr>
 				<td>3</td>
 				<td>&nbsp;</td>
 				<td><a href="IOTP03/IOTP03.html">IOTP03</a> -Raspberry Pi-SSH</td>
-				<td>&nbsp;</td>
+				<td>updated 2/22</td>
 			</tr>
 			<tr>
 				<td>4</td>
 				<td>&nbsp;</td>
 				<td><a href="IOTA01/IOTA01.html">IOTA01</a> -Arduino</td>
-				<td>&nbsp;</td>
+				<td>updated 2/15/22</td>
 			</tr>
 			<tr>
 				<td>5</td>
 				<td>&nbsp;</td>
 				<td><a href="IOTB01/IOTB01.html">IOTB01</a> -micro:bit</td>
-				<td>&nbsp;</td>
+				<td>updated 2/15/22</td>
 			</tr>
 			<tr>
 				<td>6</td>
@@ -169,48 +169,62 @@
 			<tr>
 				<td>7</td>
 				<td>&nbsp;</td>
-				<td><a href="IOT01/IOT01.html">IOTP01</a> -WaveMon-Monitor WiFi </td>
-				<td></td>
+				<td><a href="IOT01/IOT01.html">IOT01</a> -WaveMon-Monitor WiFi </td>
+				<td>updated 2/16/22</td>
 			</tr>
 			<tr>
 				<td>8</td>
 				<td>&nbsp;</td>
-				<td><a href="IOT02/IOT02.html">IOTP02</a> -Apache Webserver</td>
-				<td>&nbsp;</td>
+				<td><a href="IOT02/IOT02.html">IOT02</a> -Apache Webserver</td>
+				<td>updated 2/16/22</td>
 			</tr>
 			<tr>
 				<td>9</td>
 				<td>&nbsp;</td>
-				<td><a href="IOT03/IOT03.html">IOTP03</a> -Viewing RPi Webserver</td>
+				<td><a href="IOT03/IOT03.html">IOT03</a> -Viewing RPi Webserver</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>10</td>
 				<td>&nbsp;</td>
-				<td><a href="IOT04/IOT04.html">IOTP04</a> -Zenmap Network Scanner</td>
+				<td><a href="IOT04/IOT04.html">IOT04</a> -Zenmap Network Scanner</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>11</td>
 				<td>&nbsp;</td>
-				<td><a href="IOT05/IOT05.html">IOTP05</a> -Nagios Network Monitoring</td>
+				<td><a href="IOT05/IOT05.html">IOT05</a> -Nagios Network Monitoring</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>12</td>
 				<td>&nbsp;</td>
-				<td><a href="IOT06/IOT06.html">IOTP06</a> -RPi Monitor</td>
+				<td><a href="IOT06/IOT06.html">IOT06</a> -RPi Monitor</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>13</td>
 				<td>&nbsp;</td>
-				<td><a href="IOT07/IOT07.html">IOTP07</a> -MySQL</td>
+				<td><a href="IOT07/IOT07.html">IOT07</a> -MySQL</td>
 				<td>MIS342</td>
 			</tr>
 
 			<tr>
+				<td>14</td>
 				<td>&nbsp;</td>
+				<td>IOT08 -MagicMirror</td>
+				<td>&nbsp;</td>
+			</tr>
+
+			<tr>
+				<td>15</td>
+				<td>&nbsp;</td>
+				<td>IOT09 -Sensor System</td>
+				<td>&nbsp;</td>
+			</tr>
+
+			<tr>
+				<td>16</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
