remove Pi reference

--- a/IOTA01/IOTA01.html
+++ b/IOTA01/IOTA01.html
@@ -232,7 +232,7 @@
 			</p>
 
 			<ol>
-				<li>In the Arduino IDE, Blink sketch, choose File&gt;Save As... name it Blink01, saving it in the \pi\sketchbook\ folder as suggested.
+				<li>In the Arduino IDE, Blink sketch, choose File&gt;Save As... name it Blink01, saving it in the ..\sketchbook\ folder as suggested.
                     <br />
 				</li>
 
