updated layout for later assignments

--- a/HomePage.html
+++ b/HomePage.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>IoT Home Page</title>
+	<title>IoT2 Home Page</title>
 	<!-- PgP 2/5/2018  Need to update this page to a real RWD -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -105,7 +105,8 @@
 
 	<p>
 		Listing of current Internet of Things assignments<br />
-		spring 22-using DexPiRed2 image on microSD card, pre-installed on IoT workstations
+		spring 22-using DexPiRed2 image on microSD card, pre-installed on IoT workstations<br />
+		summer 22-will rename all of these assignments, using just IOTxx prefix, because Arduino and micro:bit on hooked into USB-C dock and can now be done independent of RPi
 	</p>
 
 
@@ -219,40 +220,47 @@
 			<tr>
 				<td>15</td>
 				<td>&nbsp;</td>
-				<td>IOT09 -Sensor System</td>
-				<td>&nbsp;</td>
+				<td>IOT09/NR01-Node-RED on RPi </td>
+				<td>MIS202</td>
 			</tr>
 
 			<tr>
 				<td>16</td>
 				<td>&nbsp;</td>
+				<td>IOT10-GrovePi+ Sensor and Actuator System</td>
+				<td>MIS312</td>
+			</tr>
+
+			<tr>
+				<td>17</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
-				<td>&nbsp;</td>
+				<td>18</td>
 				<td>&nbsp;</td>
 				<td><a href="NR01/NR01.html">NR01</a> -Node-RED on RPi</td>
-				<td>&nbsp;</td>
+				<td>starting/stopping/viewing Node-RED website on :1880</td>
 			</tr>
 
 			<tr>
-				<td>&nbsp;</td>
+				<td>19</td>
 				<td>&nbsp;</td>
 				<td><a href="NR02/NR02.html">NR02</a>-Node-RED flows</td>
-				<td>&nbsp;</td>
+				<td>creating/importing/exporting a flow-Inject and Debug nodes</td>
 			</tr>
 
 			<tr>
-				<td>&nbsp;</td>
+				<td>20</td>
 				<td>&nbsp;</td>
 				<td><a href="NR03/NR03.html">NR03</a>-Node_RED sensors</td>
-				<td>&nbsp;</td>
+				<td>create a flow using a sensor and actuator-DHT and LCD-RGB</td>
 			</tr>
 
 			<tr>
-				<td>&nbsp;</td>
+				<td>21</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
@@ -266,74 +274,74 @@
 			</tr>
 
 			<tr>
-				<td>14</td>
+				<td>22</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative14/Summative14.html">Summative14</a> -Free Speech</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>15</td>
-				<td>&nbsp;</td>
-				<td><a href="Summative15/Summative15.html">Summative15</a> -Defamation, CDA, Anonymous</td>
+				<td><a href="Summative14/Summative14.html">Summative14</a> -xxx</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
-				<td>16</td>
+				<td>23</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative16/Summative16.html">Summative16</a> -Student Speech</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>17</td>
-				<td>&nbsp;</td>
-				<td><a href="Summative17/Summative17.html">Summative17</a> -Journalism</td>
+				<td><a href="Summative15/Summative15.html">Summative15</a> -xxx</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
-				<td>18</td>
+				<td>24</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative18/Summative18.html">Summative18</a> -Obscentiy &amp; Pornography<br />
+				<td><a href="Summative16/Summative16.html">Summative16</a> -xxx</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td>25</td>
+				<td>&nbsp;</td>
+				<td><a href="Summative17/Summative17.html">Summative17</a> -xxx</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td>26</td>
+				<td>&nbsp;</td>
+				<td><a href="Summative18/Summative18.html">Summative18</a> -xxx<br />
 				</td>
 				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
-				<td>19</td>
+				<td>27</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative19/Summative19.html">Summative19</a> -Hate Speech</td>
-				<td>&nbsp;</td>
-			</tr>
-
-			<tr>
-				<td>20</td>
-				<td>&nbsp;</td>
-				<td><a href="Summative20/Summative20.html">Summative20</a> -Business &amp; Internet</td>
+				<td><a href="Summative19/Summative19.html">Summative19</a> -xxx</td>
 				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
-				<td>21</td>
+				<td>28</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative21/Summative21.html">Summative21</a> -Web Contracts</td>
-				<td>&nbsp;</td>
-			</tr>
-
-			<tr>
-				<td>22</td>
-				<td>&nbsp;</td>
-				<td><a href="Summative22/Summative22.html">Summative22</a> -Future Issues</td>
+				<td><a href="Summative20/Summative20.html">Summative20</a> -xxx</td>
 				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
-				<td>23</td>
+				<td>29</td>
+				<td>&nbsp;</td>
+				<td><a href="Summative21/Summative21.html">Summative21</a> -xxx</td>
+				<td>&nbsp;</td>
+			</tr>
+
+			<tr>
+				<td>30</td>
+				<td>&nbsp;</td>
+				<td><a href="Summative22/Summative22.html">Summative22</a> -xxx</td>
+				<td>&nbsp;</td>
+			</tr>
+
+			<tr>
+				<td>31</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
-				<td>24</td>
+				<td>32</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
