updated image path

--- a/IOTP03/IOTP03.html
+++ b/IOTP03/IOTP03.html
@@ -191,7 +191,7 @@
                 <li><p>
                     Your laptop MUST be connected to the WSU network with a WIRED connection, a wireless connection will NOT work.<br />
                     Look for this icon in your task tray:
-                <img src="WiredNetwork.PNG" alt="wired connection" class="img-responsive img-responsive" />Wired Network Connection Icon
+                <img src="images/WiredNetwork.PNG" alt="wired connection" class="img-responsive img-responsive" />Wired Network Connection Icon
                     </p>
                 </li>
 
