--- a/IOT02/homepage.html
+++ b/IOT02/homepage.html
@@ -15,6 +15,9 @@
     </script>
 
  <iframe src="https://www.winona.edu" width="600" height="400"></iframe> 
+    <p>&nbsp;</p>
+
+ <iframe src="https://www.cnn.com/" width="600" height="400"></iframe> 
 
 </body>
 
