--- a/IOT03/IOT03.html
+++ b/IOT03/IOT03.html
@@ -24,7 +24,7 @@
 
 		<input name="InstID" type="hidden" id="InstID" value="00617282">
 
-		<h1 class="text-center">Viewing a Webpage From Another Raspberry Pi</h1>
+		<h1 class="text-center">Modifying Apache2 Raspberry Pi Webpage</h1>
 
 
 		<!-- -start-Student, class and assignment information. Assignment hard-coded, other values from constants.js file-start -->
@@ -129,18 +129,15 @@
 
 				<li>Using the File Manager, locate the file: &#39;homepage.html&#39; in the folder &#39;/var/www/html&#39;</li>
 
-				<li>In the terminal window do the following to modify the homepage.html file:
+				<li>In the terminal window modify the homepage.html file:
 					<br />
 					<code>cd Desktop</code> then press Enter<br />
 					<code>sudo nano homepage.html</code>then press Enter, and you are in superuser(su) edit mode<br />
 				</li>
 
 
-				<li>Add this html code after the opening &lt;body&gt; tag:<br />
+				<li>Add your name to the webpage by inserting this html code after the opening &lt;body&gt; tag:<br />
 					<code>&nbsp;&lt;h1&gt;Enter Your Name Here&lt;/h1&gt;</code></li>
-
-				<li>In the &lt;iframe&gt; tag, change the &#39;src&#39; property of the webpage from &#39;winona.edu&#39; to &#39;https://m.cnn.com&#39;</li>
-
 
 				<li>
 
@@ -235,19 +232,64 @@
 
 		<div id="UploadScreenShot" class="collapse in  col-lg-12">
 			<p>
-				Submit to the appropriate D2L Assignment folder a screenshot that documents your work.<br />
+				Upload a screenshot that documents your work to the appropriate D2L Assignment folder.<br />
 			</p>
 			<br />
 		</div>
 
 		<div class="col-lg-12 text-primary">
 			<p>
-				(90) 1. Upload your screenshot to the &#39;IOT03&#39; D2L Assignment Folder.
+				(50) 1. Upload your screenshot to the &#39;IOT03&#39; D2L Assignment Folder.
 			</p>
 			<hr />
 		</div>
 
 
+		<!--Exercise 4-->
+
+		<div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4-Reflections</a></div>
+
+		<div id="Exercise04" class="collapse in  col-lg-12">
+
+			<p>
+				Based on your experience in this exercise, consider the value of an Apache2 web server platform for organizations.<br />
+				Think about what type of problems these devices could solve, and whether it could be cost-effective.<br />
+				Businesses are deploying IoT 'solutions'-how can Apache2 equipped Raspberry Pis support or automate these efforts?<br />
+				<br />
+				References:<br />
+				Apache2: <a href="https://httpd.apache.org/" class="bg-info text-white" target="_blank">Apache</a><br />
+
+				PiMyLifeUp <a href="https://pimylifeup.com/raspberry-pi-apache/" class="bg-info text-white" target="_blank">Apache2 Article </a><br />
+
+				W3Schools   <a href="https://www.w3schools.com/html/" class="bg-info text-white" target="_blank" >HTML</a>
+
+			</p>
+			<p>
+				&nbsp;</p>
+
+			<div class="col-lg-12 text-primary">
+				(20) 2. Reflections-value<br />
+				List a specific problem that a low-cost webserver could be used for.<br />
+				<!-- Enter your answer in the VALUE field below   GROK -->
+				<input class="form-control" name="q2" type="text" id="q2" value="specific problem:">
+				<hr />
+			</div>
+
+			<hr />
+
+
+			<div class="col-lg-12 text-primary">
+				(20) 3. Reflections-content<br />
+				Research the internet to find a company or product that is addressing your problem, using IoT technology.<br />				
+				<!-- Enter your answer in the VALUE field below   GROK -->
+				<input class="form-control" name="q3" type="text" id="q3" value="specific company:">
+				<hr />
+			</div>
+			<hr />
+
+
+
+		</div>
 
 
 
@@ -267,9 +309,9 @@
 		</div>
 
 		<div class="col-lg-12 text-primary">
-			(10) 2. Assignment submission<br />
+			(10) 4. Assignment submission<br />
 			<!-- Enter your answer in the VALUE field below   GROK -->
-			<input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOT03.">
+			<input class="form-control" name="q4" type="text" id="q4" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOT03.">
 			<hr />
 		</div>
 
@@ -284,7 +326,7 @@
 
 		<div class="col-lg-12">
 			<p>
-				Congratulations! You have successfully used Apache2, a web server, on a Raspberry Pi single board computer.                
+				Congratulations! You have successfully modified a web page, on a Raspberry Pi Apache2 web server.                
 			</p>
 			<hr />
 		</div>
@@ -296,7 +338,6 @@
 			<h2>-- WHEN DONE --<br />
 				SHUTDOWN THE RASPBERRY PI<br />
 				TURN OFF THE POWER<br />
-				REMOVE YOUR FLASH DRIVE
 			</h2>
 		</div>
 		<hr />
@@ -316,10 +357,10 @@
 	<div id="xfooter" class=" col-lg-12 text-muted"></div>
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="../ReadOnly/jquery-1.js"></script>
+	<script src="../../ReadOnly/jquery-1.js"></script>
 
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="../ReadOnly/bootstrap.js"></script>
+	<script src="../../ReadOnly/bootstrap.js"></script>
 
 
 </body>
