--- a/HomePage.html
+++ b/HomePage.html
@@ -183,7 +183,7 @@
 				<td>9</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT03/IOT03.html">IOT03</a> -Viewing RPi Webserver</td>
-				<td>&nbsp;</td>
+				<td>updated 3/10/22</td>
 			</tr>
 			<tr>
 				<td>10</td>
