Zenmap as root option added

--- a/HomePage.html
+++ b/HomePage.html
@@ -189,7 +189,7 @@
 				<td>10</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT04/IOT04.html">IOT04</a> -Zenmap Network Scanner</td>
-				<td>&nbsp;</td>
+				<td>updated 3/10/22</td>
 			</tr>
 			<tr>
 				<td>11</td>
