--- a/IOT04/IOT04.html
+++ b/IOT04/IOT04.html
@@ -135,8 +135,8 @@
                     </p>
                 </li>
                 <li>Click OK </li>
-                <li>From the menu select Internet&gt;Zenmap to start it<br />
-                </li>
+                <li>From the menu select Internet&gt;Zenmap to start it<br /></li>
+                <li>Note-you can also select Internet&gt;Zenmap(as root) to start Zenmap<br /></li>
 
             </ol>
             <hr />
