--- a/IOT05/IOT05.html
+++ b/IOT05/IOT05.html
@@ -87,18 +87,18 @@
 
 
             <p>
-                These instructions will show you how to download and install Nagios 4.x onto a Raspberry Pi.<br />
+                These instructions will show you how to run Nagios 4.x on a Raspberry Pi.<br />
                 This software allows you to run a machine monitoring program on a Raspberry Pi.<br />
                 <br />
 
                 More information on <a href="https://www.nagios.com/products/nagios-core/" class="bg-info text-white" target="_blank">Nagios Core</a> is available online.<br />
 
-                This software will allow you to monitor devices on your network(s).
+                This software allows you to monitor devices on your network(s).
             </p>
             <p>After completing this assignment you will be able to:</p>
             <ol>
                 <li>Obtain Nagios</li>
-                <li>Install Nagios Core and Plug-Ins on a Raspberry Pi</li>
+                <li>Start Nagios Core and Plug-Ins on a Raspberry Pi</li>
                 <li>Run Nagios</li>
                 <li>Monitor a computer using Nagios</li>
             </ol>
@@ -123,13 +123,13 @@
 
         <!--Exercise 1-->
 
-        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Install Nagios</a><a href="#Exercise01"></a></div>
+        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Review Nagios Intallation</a><a href="#Exercise01"></a></div>
 
         <div id="Exercise01" class="collapse in  col-lg-12">
 
             <p>ref: <a href="https://support.nagios.com/kb/article/nagios-core-installing-nagios-core-from-source-96.html#Raspbian" class="bg-info text-white" target="_blank">Nagios Core Raspian Installation Instructions</a>  </p>
             <ol>
-                <li>These steps are performed on the Raspberry Pi.</li>
+                <li>These steps have already been performed on the Raspberry Pi Image, and are for information purposes.</li>
 
                 <li>Open a Terminal window and enter the following commands to ensure your Raspberry Pi is up to date<br />
                     <code>sudo apt-get update</code><br />
@@ -163,8 +163,8 @@
                     <code>sudo htpasswd -c /usr/local/nagios/etc/htpasswd.users nagiosadmin</code><br />
                     When prompted, set the password to: <code>Nagio$</code><br />
                     <p>
-                        <a href="NagiosAdmin.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('NagiosAdmin.PNG', 'popup'); return false;">
-                            <img src="NagiosAdmin.PNG" width="300" alt="Nagios Password" class="img-responsive img-responsive" /></a>Nagios Password Prompt<br />
+                        <a href="images/NagiosAdmin.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/NagiosAdmin.PNG', 'popup'); return false;">
+                            <img src="images/NagiosAdmin.PNG" width="300" alt="Nagios Password" class="img-responsive img-responsive" /></a>Nagios Password Prompt<br />
                     </p>
                     <code>sudo systemctl restart apache2.service</code><br />
                     <code>sudo systemctl start nagios.service</code>  This will start Nagios Core<br />
@@ -173,11 +173,11 @@
                 </li>
 
 
-                <li>After the Nagios 4.4.5 install is complete, point your browser to the url: <code>127.0.0.1/nagios</code><br />
+                <li>After the Nagios 4.4.6 install is complete, point your browser to the url: <code>127.0.0.1/nagios</code><br />
                     Enter username <code>nagiosadmin</code> and password <code>Nagio$</code>
                     <p>
-                        <a href="Nagios4.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('Nagios4.PNG', 'popup'); return false;">
-                            <img src="Nagios4.PNG" width="300" alt="Nagios4" class="img-responsive img-responsive" /></a>Nagios4 Running<br />
+                        <a href="images/Nagios4.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/Nagios4.PNG', 'popup'); return false;">
+                            <img src="images/Nagios4.PNG" width="300" alt="Nagios4" class="img-responsive img-responsive" /></a>Nagios4 Running<br />
                     </p>
                 </li>
 
@@ -186,6 +186,9 @@
                 </li>
 
                 <li>If the webpage does not appear, troubleshoot and resolve any issues.<br />
+                </li>
+                <li>Note-you can also access the Raspberry Pi Nagios interface from another computer using the IP address:
+                    <code>http://10.30.19.x</code>
                 </li>
 
             </ol>
@@ -196,14 +199,17 @@
 
         <!--Exercise 2-->
 
-        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Add Nagios Plug-Ins</a></div>
+        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Review Nagios Plug-Ins</a></div>
 
         <div id="Exercise02" class="collapse in  col-lg-12">
 
             <ol>
-                <li>These steps are performed on your Raspberry Pi.</li>
+                <li>These steps have already been performed on your Raspberry Pi, they are here for review, or in case you decide to install additional plug-ins.</li>
+                
+                <li>Note, these steps can also be performed from another computer.</li>
 
-                <li>Open the browser and go to: <code>127.0.0.1/nagios</code> (if it is not already running) <br />
+                <li>On the RPi, open the browser to: <code>127.0.0.1/nagios</code>  <br />
+                    If using another computer browse to: <code>10.38.19.x/nagios</code>
                 </li>
 
                 <li>The home page contains links to the currrent status of your Raspberry Pi, and getting started.<br />
@@ -213,8 +219,8 @@
                     You will notice some errors, so follow the steps below that will install the plug-ins to resolve this situation.<br />
 
                     <p>
-                        <a href="Nagios4ServiceErrors.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('Nagios4ServiceErrors.PNG', 'popup'); return false;">
-                            <img src="Nagios4ServiceErrors.PNG" width="300" alt="Nagios4 Service Errors" class="img-responsive img-responsive" /></a>Nagios4 Service Errors<br />
+                        <a href="images/Nagios4ServiceErrors.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/Nagios4ServiceErrors.PNG', 'popup'); return false;">
+                            <img src="images/Nagios4ServiceErrors.PNG" width="300" alt="Nagios4 Service Errors" class="img-responsive img-responsive" /></a>Nagios4 Service Errors<br />
                     </p>
                 </li>
 
@@ -255,13 +261,14 @@
 
         <div id="Exercise03" class="collapse in  col-lg-12">
 
-            <p>Point the browser to  <code>127.0.0.1/nagios</code><br />
+            <p>Point the browser to  <code>127.0.0.1/nagios</code><br />or <br />
+                <code>10.30.19.x/nagios</code><br />
                 From the homepage, under the &#39;Current Status&#39; section, select &#39;Services&#39; and you will see a page similar to below.<br />               
             </p>
 
                     <p>
-                        <a href="Nagios4ServicesSS.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('Nagios4ServicesSS.PNG', 'popup'); return false;">
-                            <img src="Nagios4ServicesSS.PNG" width="300" alt="Nagios" class="img-responsive img-responsive" /></a>Nagios4 Services<br />
+                        <a href="images/Nagios4ServicesSS.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/Nagios4ServicesSS.PNG', 'popup'); return false;">
+                            <img src="images/Nagios4ServicesSS.PNG" width="300" alt="Nagios" class="img-responsive img-responsive" /></a>Nagios4 Services<br />
                     </p>
 
             <ol>
@@ -271,7 +278,7 @@
                 Note: this can be done using the Snipping Tool if you are running VNC, or use the <code>scrot</code> command if you are connected to the Raspberry Pi with a keyboard and mouse.
                 </li>
 
-                <li>On your laptop you may want to save the screenshot  as &quot;IOT05&quot; in your ' 
+                <li>On your laptop save the screenshot  as &quot;IOT05&quot; in your ' 
              <code><span id="abPath"></span></code>
                     <script>document.getElementById("abPath").innerHTML = Path; </script>
                     ' folder.<br />
@@ -299,77 +306,139 @@
 
         <div class="col-lg-12 text-primary">
             <p>
-                (90) 1. Upload your screenshot to the &#39;IOT05&#39; D2L Assignment Folder.
+                (50) 1. Upload your screenshot to the &#39;IOT05&#39; D2L Assignment Folder.
             </p>
             <hr />
         </div>
 
+		<!--Exercise 4-->
+
+		<div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4-Reflections</a></div>
+
+		<div id="Exercise04" class="collapse in  col-lg-12">
+
+			<p>
+				Based on your experience in this exercise, consider the value of Nagios for organizations, especially the Information Technology staff.<br />
+				Think about what type of problems a Raspberry Pi equipped Nagios monitor could solve, and whether it could be cost-effective.<br />
+				Businesses are deploying IoT 'solutions'-how can Nagios equipped Raspberry Pis support or automate these efforts?<br />
+				<br />
+				References:<br />
+				Nagios: <a class="bg-info text-white" href="https://www.nagios.com/products/nagios-core/" target="_blank">Nagios Core</a><br />
+
+				Nagios :&nbsp; <a class="bg-info text-white" href="https://support.nagios.com/kb/article/nagios-core-installing-nagios-core-from-source-96.html#Raspbian" target="_blank">Users&#39; Installation </a><br />
+
+				Guru99   <a href="https://www.guru99.com/nagios-tutorial.html" class="bg-info text-white" target="_blank">Nagios</a><br />
+
+                Nagios: <a href="https://www.nagios.org/ncpa/getting-started.php#windows" class="bg-info text-white" target="_blank">NCPA-Windows</a><br />
+
+
+			</p>
+			<p>
+				&nbsp;</p>
+
+			<div class="col-lg-12 text-primary">
+				(20) 2. Reflections-value<br />
+				List a specific problem that a low-cost Nagios monitor could solve.<br />
+				<!-- Enter your answer in the VALUE field below   GROK -->
+				<input class="form-control" name="q2" type="text" id="q2" value="specific problem:">
+				<hr />
+			</div>
+
+			<hr />
+
+
+			<div class="col-lg-12 text-primary">
+				(20) 3. Reflections-content<br />
+				Research the internet on the topic of network device monitoring.<br />	
+                Why would an organization&#39;s IT department use nmap to monitor their own organization&#39;s network?<br />
+                Hint:&nbsp; <a href="https://www.guru99.com/nagios-tutorial.html" class="bg-info text-white" target="_blank"  >Nagios Tutorial
+                
+				<!-- Enter your answer in the VALUE field below   GROK -->
+				</a>
+				<input class="form-control" name="q3" type="text" id="q3" value="monitor network:">
+				<hr />
+			</div>
+			<hr />
 
 
 
-        <div class="col-lg-12"><a href="#ExerciseSubmit" class="btn btn-info" data-toggle="collapse">Submit Assignment</a></div>
-
-
-        <div class="col-lg-12">
-            <p>
-                When all tasks are completed press the Submit button.
-            </p>
-            <hr />
-        </div>
-
-        <div class="col-lg-12 text-primary">
-            (10) 2. Assignment submission<br />
-            <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOT05.">
-            <hr />
-        </div>
-
-
-
-        <hr />
-
-
-        <hr />
-
-        <div class="col-lg-12">
-            <p>
-                Congratulations! You have successfully installed and used Nagios, a monitoring program on a Raspberry Pi single board computer.                
-            </p>
-            <hr />
-        </div>
+		</div>
 
 
 
 
-        <div class="col-lg-12 text-danger text-center">
-            <h2>-- WHEN DONE --<br />
-                SHUTDOWN THE RASPBERRY PI<br />
-                TURN OFF THE POWER<br />
-                REMOVE YOUR FLASH DRIVE
-            </h2>
-        </div>
-        <hr />
 
 
-        <div class=" col-lg-12">
-            <br />
-            <input class=" text-danger btn-block btn-lg" type="submit" name="Submit" value="SUBMIT -once you have completed this assignment- SUBMIT">
-            <br />
-        </div>
 
-    </form>
 
-    <!-- Creative Commons License Info -->
-    <div id="xLicense" class=" col-lg-12 text-muted"></div>
+		<div class="col-lg-12"><a href="#ExerciseSubmit" class="btn btn-info" data-toggle="collapse">Submit Assignment</a></div>
 
-    <div id="xfooter" class=" col-lg-12 text-muted"></div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="../../ReadOnly/jquery-1.js"></script>
+		<div class="col-lg-12">
+			<p>
+				When all tasks are completed press the Submit button.
+			</p>
+			<hr />
+		</div>
 
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../../ReadOnly/bootstrap.js"></script>
+		<div class="col-lg-12 text-primary">
+			(10) 4. Assignment submission<br />
+			<!-- Enter your answer in the VALUE field below   GROK -->
+			<input class="form-control" name="q4" type="text" id="q4" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOT05.">
+			<hr />
+		</div>
+
+
+
+
+
+		<hr />
+
+
+		<hr />
+
+		<div class="col-lg-12">
+			<p>
+				Congratulations! You have used Nagios, a network monitoring tool, on a Raspberry Pi single board computer.                
+			</p>
+			<hr />
+		</div>
+
+
+
+
+		<div class="col-lg-12 text-danger text-center">
+			<h2>-- WHEN DONE --<br />
+				SHUTDOWN THE RASPBERRY PI<br />
+				TURN OFF THE POWER<br />
+			</h2>
+		</div>
+		<hr />
+
+
+		<div class=" col-lg-12">
+			<br />
+			<input class=" text-danger btn-block btn-lg" type="submit" name="Submit" value="SUBMIT -once you have completed this assignment- SUBMIT">
+			<br />
+		</div>
+
+	</form>
+
+	<!-- Creative Commons License Info -->
+	<div id="xLicense" class=" col-lg-12 text-muted"></div>
+
+	<div id="xfooter" class=" col-lg-12 text-muted"></div>
+
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="../../ReadOnly/jquery-1.js"></script>
+
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="../../ReadOnly/bootstrap.js"></script>
 
 
 </body>
 </html>
+
+
+
+
