--- a/HomePage.html
+++ b/HomePage.html
@@ -201,7 +201,7 @@
 				<td>12</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT06/IOT06.html">IOT06</a> -RPi Monitor</td>
-				<td>&nbsp;</td>
+				<td>updated 3/10/22</td>
 			</tr>
 			<tr>
 				<td>13</td>
