--- a/HomePage.html
+++ b/HomePage.html
@@ -220,7 +220,7 @@
 			<tr>
 				<td>15</td>
 				<td>&nbsp;</td>
-				<td>IOT09/NR01-Node-RED on RPi </td>
+				<td><a href="IOT09/IOT09.html">IOT09</a>/NR01-Node-RED on RPi </td>
 				<td>MIS202</td>
 			</tr>
 
