correct typo in iot06, create initial Node-RED assignment

--- a/HomePage.html
+++ b/HomePage.html
@@ -241,7 +241,7 @@
 			<tr>
 				<td>18</td>
 				<td>&nbsp;</td>
-				<td><a href="NR01/NR01.html">NR01</a> -Node-RED on RPi</td>
+				<td><a href="IOT09/IOT09.html">NR01</a> -Node-RED on RPi</td>
 				<td>starting/stopping/viewing Node-RED website on :1880</td>
 			</tr>
 
