--- a/IOT06/IOT06.html
+++ b/IOT06/IOT06.html
@@ -128,7 +128,7 @@
             <p>ref: <a href="https://xavierberger.github.io/RPi-Monitor-docs/11_installation.html#installation-from-repository" class="bg-info text-white" target="_blank">RPi-Monitor Installation</a>  </p>
             <ol>
                 <li>These steps are performed on the Raspberry Pi</li>
-                <li>Open and Terminal window and enter the following command to start the RPi-Monitor program if it is not already running: <br />
+                <li>Open a Terminal window and enter the following command to start the RPi-Monitor program if it is not already running: <br />
                     <code>rpimonitord</code>
                     <br />
                     <p>
