--- a/IOT09/IOT09.html
+++ b/IOT09/IOT09.html
@@ -127,7 +127,7 @@
             <p>ref: <a href="https://xavierberger.github.io/RPi-Monitor-docs/11_installation.html#installation-from-repository" class="bg-info text-white" target="_blank">RPi-Monitor Installation</a>  </p>
             <ol>
                 <li>These steps are performed on the Raspberry Pi</li>
-                <li>Open and Terminal window and enter the following command to start the RPi-Monitor program if it is not already running: <br />
+                <li>Open a Terminal window and enter the following command to start the RPi-Monitor program if it is not already running: <br />
                     <code>rpimonitord</code>
                     <br />
                     <p>
@@ -226,7 +226,7 @@
                 Note: this can be done using the Snipping Tool if you are running VNC, or use the <code>scrot</code> command if you are connected to the Raspberry Pi with a keyboard and mouse.
                 </li>
 
-                <li>On your laptop save the screenshot  as &quot;IOT06&quot; in your ' 
+                <li>On your laptop save the screenshot  as &quot;IOT09&quot; in your ' 
              <code><span id="abPath"></span></code>
                     <script>document.getElementById("abPath").innerHTML = Path; </script>
                     ' folder.<br />
@@ -237,7 +237,7 @@
 
 
         <div class="col-lg-12 text-danger">
-            <h2>ScreenShot IOT06</h2>
+            <h2>ScreenShot IOT09</h2>
             <hr />
         </div>
 
@@ -254,7 +254,7 @@
 
         <div class="col-lg-12 text-primary">
             <p>
-                (50) 1. Upload your screenshot to the &#39;IOT06&#39; D2L Assignment Folder.
+                (50) 1. Upload your screenshot to the &#39;IOT09&#39; D2L Assignment Folder.
             </p>
             <hr />
         </div>
@@ -274,7 +274,7 @@
 				Businesses are deploying IoT 'solutions'-how can RPi monitor equipped Raspberry Pis support or automate these efforts?<br />
 				<br />
 				References:<br />
-				RPi Monitor: <a href="https://xavierberger.github.io/RPi-Monitor-docs/index.html">RPiMonitor</a><br />
+				Node-RED: <a href="https://nodered.org/docs/getting-started/raspberrypi">Getting Started</a><br />
 
 				RPi Monitor:&nbsp; <a href="https://xavierberger.github.io/RPi-Monitor-docs/11_installation.html#installation-from-repository">Installation</a><br />
 
@@ -328,7 +328,7 @@
 		<div class="col-lg-12 text-primary">
 			(10) 4. Assignment submission<br />
 			<!-- Enter your answer in the VALUE field below   GROK -->
-			<input class="form-control" name="q4" type="text" id="q4" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOT06.">
+			<input class="form-control" name="q4" type="text" id="q4" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOT09.">
 			<hr />
 		</div>
 
@@ -343,8 +343,7 @@
 
 		<div class="col-lg-12">
 			<p>
-				Congratulations! You have used the RPi to start Node-RED, a user-friendly coding environment, on a Raspberry Pi single board computer.                
-			</p>
+				Congratulations! You have used the RPi to start Node-RED, a user-friendly coding environment, on a Raspberry Pi single board computer. </p>
 			<hr />
 		</div>
 
