--- a/HomePage.html
+++ b/HomePage.html
@@ -221,7 +221,7 @@
 				<td>15</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT09/IOT09.html">IOT09</a>/NR01-Node-RED on RPi </td>
-				<td>MIS202</td>
+				<td>MIS202-updated 3/10/22</td>
 			</tr>
 
 			<tr>
