revised IOT07, include reflections

--- a/HomePage.html
+++ b/HomePage.html
@@ -207,7 +207,7 @@
 				<td>13</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT07/IOT07.html">IOT07</a> -MySQL</td>
-				<td>MIS342</td>
+				<td>MIS342-updated 3/11/22</td>
 			</tr>
 
 			<tr>
