initial steps creating IoT assignment with sensors, actuators

--- a/IOT10/IOT10.html
+++ b/IOT10/IOT10.html
@@ -87,8 +87,9 @@
 
 
             <p>
-                These instructions will show you how to a Raspberry Pi can interact with the physical world using sensors and actuators.<br />
-                This software and hardware allows you to collect data from sensors and programs on a Raspberry Pi.<br />
+                These instructions will show you how a Raspberry Pi can interact with the physical world using sensors and actuators.<br />
+                This software and hardware allows you to collect data from sensors 
+				and send signals to actuators by Python programs running on a Raspberry Pi.<br />
                 <br />
 
                 More information on the <a href="https://wiki.seeedstudio.com/GrovePi_Plus/" class="bg-info text-white" target="_blank">GrovePi+</a> system used is available online.<br />
@@ -139,8 +140,9 @@
                         <a href="images/GrovePi_ResetLightOn.png" class="img-responsive img-rounded" target="popup" onclick="window.open('images/GrovePi_ResetLightOn.png', 'popup'); return false;">
                             <img src="images/GrovePi_ResetLightOn.png" width="200" alt="GrovePi reset light" class="img-responsive img-responsive" /></a>GrovePi with Red Reset light on<br />
                     </p>
+                </li> 
 
-                    <br />
+                <li>Familiarize yourself with the available sensors and actuators depicted below.<br />
 
                     <p>
                         <a href="images/SensorsActuators_SBC.png" class="img-responsive img-rounded" target="popup" onclick="window.open('images/SensorsActuators_SBC.png', 'popup'); return false;">
