--- a/IOT10/IOT10.html
+++ b/IOT10/IOT10.html
@@ -151,9 +151,7 @@
 
                 </li>
 
-                <li>Open a Terminal window and enter the following commands to ensure your Raspberry Pi is up to date<br />
-                    <code>sudo apt update</code><br />
-                    <code>sudo apt full-upgrade</code>
+                <li>Review the <a href="images/SensorActuatorConfig.html" class="bg-info text-white"  target="_blank">GrovePi Configuration</a> that details how the sensors and actuators are physically connected.
                 </li>
 
                 <li>In the Terminal window enter the following commands to install MySQL:<br />
