hyperlink format update

--- a/IOT10/IOT10.html
+++ b/IOT10/IOT10.html
@@ -154,6 +154,8 @@
                 <li>Review the <a href="images/SensorActuatorConfig.html" class="bg-info text-white"  target="_blank">GrovePi Configuration</a> that details how the sensors and actuators are physically connected.
                 </li>
 
+                <li>&nbsp;</li>
+
                 <li>In the Terminal window enter the following commands to install MySQL:<br />
                     <code>sudo apt install mariadb-server -y</code><br />
                     It will take a few minutes for the installation to complete.
