--- a/HomePage.html
+++ b/HomePage.html
@@ -228,7 +228,7 @@
 				<td>16</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT10/IOT10.html">IOT10</a>-GrovePi+ Sensor and Actuator System</td>
-				<td>MIS312</td>
+				<td>MIS312-updated 3/12/2022</td>
 			</tr>
 
 			<tr>
