initial MagicMirror assignment

--- a/HomePage.html
+++ b/HomePage.html
@@ -213,7 +213,7 @@
 			<tr>
 				<td>14</td>
 				<td>&nbsp;</td>
-				<td>IOT08 -MagicMirror</td>
+				<td><a href="IOT08/IOT08.html">IOT08</a> -MagicMirror</td>
 				<td>&nbsp;</td>
 			</tr>
 
